syntax = 'proto3';
package debug_http_server;

option java_multiple_files = false;
option java_package = "io.zeebe.broker.exporter.debug.protocol";
option go_package = "pb";

message FetchRecordsRequest {
}

message JsonRecord {
  string serialized = 1;
}

service Exporter {
  rpc FetchRecords (FetchRecordsRequest) returns (stream JsonRecord) {
  }
}
